[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "stripe>=13.1.1",
    "twilio>=9.8.5",
    "uvicorn[standard]>=0.38.0",
]
